added menu and logo

--- a/index.html
+++ b/index.html
@@ -4,32 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.cssss">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Document</title>
 </head>
 <body>
 
 
     <div class="header">
+        
         <div class="box">
-            <ul>
-                <li><a href="">Пункт меню</a></li>
-                <li><a href="">Пункт меню</a></li>
-                <li><a href="">Пункт меню</a></li>
-                <li><a href="">Пункт меню</a></li>
-                <li><a href="">Пункт меню</a></li>
+            <ul class="menu-main">
+                <li><a href="" class="current">Work</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href="">Contact</a></li>
             </ul>
+            <div class="logo_div"><a href="" class="logo_a">LOGO</a></div>
         </div>
-    </div>
-
-
-    <div class="box">
-
-    </div>
-
-
-    <div class="footer">
-
     </div>
 
 
