--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 
-    <div class="header">
+    <header>
         
         <div class="box">
             <ul class="menu-main">
@@ -21,36 +21,7 @@
             </ul>
             <div class="logo_div"><a href="" class="logo_a">LOGO</a></div>
         </div>
-        <div class="box_body">
-        <ul>
-            <li>
-                Компьютеры и комплектующие
-                <ul>
-                    <li>Процессоры</li>
-                    <li>Мониторы</li>
-                    <li>Видеокарты</li>
-                </ul>
-            </li>
-            <li>
-                Бытовая техника
-                <ul>
-                    <li>Холодильники</li>
-                    <li>Телевизоры</li>
-                    <li>Стиральные машины</li>
-                </ul>
-            </li>
-                <li>
-                    Товары для дома
-                    <ul>
-                        <li>Кресла</li>
-                        <li>Матрасы</li>
-                        <li>Электрокамины</li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-    </div>
-
+    </header>
 
 </body>
 </html>
