added header main footer and some img

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,8 +8,124 @@
 </head>
 <body>
     <header>
-        
+
+        <nav>
+            <a href="">Web Studio</a>
+
+            <ul>
+                <li><a href="">Студия</a></li>
+                <li><a href="">Портфолио</a></li>
+                <li><a href="">Контакты</a></li>
+            </ul>
+        </nav>
+
+        <ul>
+            <li><img src="./img/img_1.svg" alt=""><a href="">info@devstudio.com</a></li>
+            <li><img src="./img/img_2.svg" alt=""><a href="">+38 096 111 11 11</a></li>
+        </ul>    
     </header>
-    
+    <main>
+        <section>
+            <img src="./img/iconsend.svg2" alt="main pscture">
+            <h1>Эффективные решения для вашего бизнеса</h1>
+            <a href="">Заказать услугу</a>
+        </section>
+        <section>
+            <h2>Наши преимущества</h2>
+            <ul>
+                <li><img src="./img/img_3.svg" alt="">
+                    <h3>Внимание к деталям</h3>
+                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                </li>
+                <li><img src="./img/img_4.svg" alt="">
+                    <h3>Пунктуальность</h3>
+                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                </li>
+                <li><img src="./img/img_5.svg" alt="">
+                    <h3>Планирование</h3>
+                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                </li>
+                <li><img src="./img/img_6.svg" alt="">
+                    <h3>Современные технологии</h3>
+                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>Наша команда</h2>
+            <ul>
+                <li><img src="./img/img1_1.jpg" alt="">
+                    <h3>John Smith</h3>
+                    <p>Product Designer</p>
+                    <ul>
+                    <li><a href=""><img src="./img/instagram2.svg" alt=""></a></li>
+                    <li><a href=""><img src="./img/Vector.svg" alt=""></a></li>
+                    <li><a href=""><img src="./img/facebook.svg" alt=""></a></li>
+                    <li><a href=""><img src="./img/linkedin1.svg" alt=""></a></li>
+                    </ul>
+                </li>
+                <li><img src="./img/img1_2.jpg" alt="">
+                    <h3>Marta Stewart</h3>
+                    <p>Frontend Developer</p>
+                    <ul>
+                        <li><a href=""><img src="./img/instagram2.svg" alt=""></a></li>
+                        <li><a href=""><img src="./img/Vector.svg" alt=""></a></li>
+                        <li><a href=""><img src="./img/facebook.svg" alt=""></a></li>
+                        <li><a href=""><img src="./img/linkedin1.svg" alt=""></a></li>
+                    </ul>
+                </li>
+                <li><img src="./img/img1_3.jpg" alt="">
+                    <h3>Robert Jakis</h3>
+                    <p>Marketing</p>
+                    <ul>
+                        <li><a href=""><img src="./img/instagram2.svg" alt=""></a></li>
+                        <li><a href=""><img src="./img/Vector.svg" alt=""></a></li>
+                        <li><a href=""><img src="./img/facebook.svg" alt=""></a></li>
+                        <li><a href=""><img src="./img/linkedin1.svg" alt=""></a></li>
+                    </ul>
+                </li>
+                <li><img src="./img/img1_4.jpg" alt="">
+                    <h3>Martin Doe</h3>
+                    <p>UI Designer</p>
+                    <ul>
+                        <li><a href=""><img src="./img/instagram2.svg" alt=""></a></li>
+                        <li><a href=""><img src="./img/Vector.svg" alt=""></a></li>
+                        <li><a href=""><img src="./img/facebook.svg" alt=""></a></li>
+                        <li><a href=""><img src="./img/linkedin1.svg" alt=""></a></li>
+                    </ul>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>Постоянные клиенты</h2>
+            <ul>
+                <li><a href=""><img src="./img/logo_1.svg" alt=""></a></li>
+                <li><a href=""><img src="./img/logo_2.svg" alt=""></a></li>
+                <li><a href=""><img src="./img/logo_3.svg" alt=""></a></li>
+                <li><a href=""><img src="./img/logo_4.svg" alt=""></a></li>
+                <li><a href=""><img src="./img/logo_5.svg" alt=""></a></li>
+                <li><a href=""><img src="./img/logo_6.svg" alt=""></a></li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <a href="">Web Studio</a>
+        <p>г. Киев, пр-т Леси Украинки, 26</p>
+        <ul>
+            <li><p>info@example.com</p></li>
+            <li><p>+38 099 111 11 11</p></li>
+        </ul>
+        <p>присоединяйтесь</p>
+        <ul>
+            <li><a href=""><img src="./img/instagram2.svg" alt=""></a></li>
+            <li><a href=""><img src="./img/Vector.svg" alt=""></a></li>
+            <li><a href=""><img src="./img/facebook.svg" alt=""></a></li>
+            <li><a href=""><img src="./img/linkedin1.svg" alt=""></a></li>
+        </ul>
+        <form action="handler.php">
+            <strong>Подпишитесь на рассылку</strong>
+            <input type="text"  placeholder="E-mail" >
+        </form>
+    </footer>
 </body>
 </html>
