--- a/index.html
+++ b/index.html
@@ -20,32 +20,32 @@
         </nav>
 
         <ul>
-            <li><img src="./img/img_1.svg" alt=""><a href="">info@devstudio.com</a></li>
-            <li><img src="./img/img_2.svg" alt=""><a href="">+38 096 111 11 11</a></li>
+            <li><img src="./img/img_1.svg" alt="" width="16"><a href="">info@devstudio.com</a></li>
+            <li><img src="./img/img_2.svg" alt="" width="10px"><a href="">+38 096 111 11 11</a></li>
         </ul>    
     </header>
     <main>
         <section>
-            <img src="./img/iconsend.svg2" alt="main pscture">
+            <img src="./img/iconsend.svg2" alt="main pscture" width="480px">
             <h1>Эффективные решения для вашего бизнеса</h1>
             <a href="">Заказать услугу</a>
         </section>
         <section>
             <h2>Наши преимущества</h2>
             <ul>
-                <li><img src="./img/img_3.svg" alt="">
+                <li><img src="./img/img_3.svg" alt="" width="65,32px">
                     <h3>Внимание к деталям</h3>
                     <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
-                <li><img src="./img/img_4.svg" alt="">
+                <li><img src="./img/img_4.svg" alt="" width="66,96px">
                     <h3>Пунктуальность</h3>
                     <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
-                <li><img src="./img/img_5.svg" alt="">
+                <li><img src="./img/img_5.svg" alt="" width="70px">
                     <h3>Планирование</h3>
                     <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
-                <li><img src="./img/img_6.svg" alt="">
+                <li><img src="./img/img_6.svg" alt="" width="54,83px">
                     <h3>Современные технологии</h3>
                     <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
@@ -54,44 +54,44 @@
         <section>
             <h2>Наша команда</h2>
             <ul>
-                <li><img src="./img/img1_1.jpg" alt="">
+                <li><img src="./img/img1_1.jpg" alt="" width="450px">
                     <h3>John Smith</h3>
                     <p>Product Designer</p>
                     <ul>
-                    <li><a href=""><img src="./img/instagram2.svg" alt=""></a></li>
-                    <li><a href=""><img src="./img/Vector.svg" alt=""></a></li>
-                    <li><a href=""><img src="./img/facebook.svg" alt=""></a></li>
-                    <li><a href=""><img src="./img/linkedin1.svg" alt=""></a></li>
+                    <li><a href=""><img src="./img/instagram2.svg" alt="" width="20px"></a></li>
+                    <li><a href=""><img src="./img/Vector.svg" alt="" width="20px"></a></li>
+                    <li><a href=""><img src="./img/facebook.svg" alt="" width="20px"></a></li>
+                    <li><a href=""><img src="./img/linkedin1.svg" alt="" width="20px"></a></li>
                     </ul>
                 </li>
-                <li><img src="./img/img1_2.jpg" alt="">
+                <li><img src="./img/img1_2.jpg" alt="" width="450px">
                     <h3>Marta Stewart</h3>
                     <p>Frontend Developer</p>
                     <ul>
-                        <li><a href=""><img src="./img/instagram2.svg" alt=""></a></li>
-                        <li><a href=""><img src="./img/Vector.svg" alt=""></a></li>
-                        <li><a href=""><img src="./img/facebook.svg" alt=""></a></li>
-                        <li><a href=""><img src="./img/linkedin1.svg" alt=""></a></li>
+                        <li><a href=""><img src="./img/instagram2.svg" alt="" width="20px"></a></li>
+                        <li><a href=""><img src="./img/Vector.svg" alt="" width="20px"></a></li>
+                        <li><a href=""><img src="./img/facebook.svg" alt="" width="20px"></a></li>
+                        <li><a href=""><img src="./img/linkedin1.svg" alt="" width="20px"></a></li>
                     </ul>
                 </li>
-                <li><img src="./img/img1_3.jpg" alt="">
+                <li><img src="./img/img1_3.jpg" alt="" width="450px">
                     <h3>Robert Jakis</h3>
                     <p>Marketing</p>
                     <ul>
-                        <li><a href=""><img src="./img/instagram2.svg" alt=""></a></li>
-                        <li><a href=""><img src="./img/Vector.svg" alt=""></a></li>
-                        <li><a href=""><img src="./img/facebook.svg" alt=""></a></li>
-                        <li><a href=""><img src="./img/linkedin1.svg" alt=""></a></li>
+                        <li><a href=""><img src="./img/instagram2.svg" alt="" width="20px"></a></li>
+                        <li><a href=""><img src="./img/Vector.svg" alt="" width="20px"></a></li>
+                        <li><a href=""><img src="./img/facebook.svg" alt="" width="20px"></a></li>
+                        <li><a href=""><img src="./img/linkedin1.svg" alt="" width="20px"></a></li>
                     </ul>
                 </li>
-                <li><img src="./img/img1_4.jpg" alt="">
+                <li><img src="./img/img1_4.jpg" alt="" width="450px">
                     <h3>Martin Doe</h3>
                     <p>UI Designer</p>
                     <ul>
-                        <li><a href=""><img src="./img/instagram2.svg" alt=""></a></li>
-                        <li><a href=""><img src="./img/Vector.svg" alt=""></a></li>
-                        <li><a href=""><img src="./img/facebook.svg" alt=""></a></li>
-                        <li><a href=""><img src="./img/linkedin1.svg" alt=""></a></li>
+                        <li><a href=""><img src="./img/instagram2.svg" alt="" width="20px"></a></li>
+                        <li><a href=""><img src="./img/Vector.svg" alt="" width="20px"></a></li>
+                        <li><a href=""><img src="./img/facebook.svg" alt="" width="20px"></a></li>
+                        <li><a href=""><img src="./img/linkedin1.svg" alt="" width="20px"></a></li>
                     </ul>
                 </li>
             </ul>
@@ -99,12 +99,12 @@
         <section>
             <h2>Постоянные клиенты</h2>
             <ul>
-                <li><a href=""><img src="./img/logo_1.svg" alt=""></a></li>
-                <li><a href=""><img src="./img/logo_2.svg" alt=""></a></li>
-                <li><a href=""><img src="./img/logo_3.svg" alt=""></a></li>
-                <li><a href=""><img src="./img/logo_4.svg" alt=""></a></li>
-                <li><a href=""><img src="./img/logo_5.svg" alt=""></a></li>
-                <li><a href=""><img src="./img/logo_6.svg" alt=""></a></li>
+                <li><a href=""><img src="./img/logo_1.svg" alt="" width="44,27px"></a></li>
+                <li><a href=""><img src="./img/logo_2.svg" alt="" width="40px"></a></li>
+                <li><a href=""><img src="./img/logo_3.svg" alt="" width="41px"></a></li>
+                <li><a href=""><img src="./img/logo_4.svg" alt="" width="79,66px"></a></li>
+                <li><a href=""><img src="./img/logo_5.svg" alt="" width="59px"></a></li>
+                <li><a href=""><img src="./img/logo_6.svg" alt="" width="88,48px"></a></li>
             </ul>
         </section>
     </main>
@@ -117,14 +117,14 @@
         </ul>
         <p>присоединяйтесь</p>
         <ul>
-            <li><a href=""><img src="./img/instagram2.svg" alt=""></a></li>
-            <li><a href=""><img src="./img/Vector.svg" alt=""></a></li>
-            <li><a href=""><img src="./img/facebook.svg" alt=""></a></li>
-            <li><a href=""><img src="./img/linkedin1.svg" alt=""></a></li>
+            <li><a href=""><img src="./img/instagram2.svg" alt="" width="20px"></a></li>
+            <li><a href=""><img src="./img/Vector.svg" alt="" width="20px"></a></li>
+            <li><a href=""><img src="./img/facebook.svg" alt="" width="20px"></a></li>
+            <li><a href=""><img src="./img/linkedin1.svg" alt="" width="20px"></a></li>
         </ul>
         <form action="handler.php">
             <strong>Подпишитесь на рассылку</strong>
-            <input type="text"  placeholder="E-mail" >
+            <input type="text"  placeholder="E-mail" width="450px">
         </form>
     </footer>
 </body>
