--- a/index.html
+++ b/index.html
@@ -110,11 +110,13 @@
     </main>
     <footer>
         <a href="">Web Studio</a>
-        <p>г. Киев, пр-т Леси Украинки, 26</p>
-        <ul>
-            <li><p>info@example.com</p></li>
-            <li><p>+38 099 111 11 11</p></li>
-        </ul>
+        <address>
+            <p>г. Киев, пр-т Леси Украинки, 26</p>
+            <ul>
+                <li><p>info@example.com</p></li>
+                <li><p>+38 099 111 11 11</p></li>
+            </ul>
+        </address>
         <p>присоединяйтесь</p>
         <ul>
             <li><a href=""><img src="./img/instagram2.svg" alt="" width="20px"></a></li>
