--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
     </header>
     <main>
         <section>
-            <img src="./img/iconsend.svg2" alt="main pscture" width="480px">
             <h1>Эффективные решения для вашего бизнеса</h1>
             <a href="">Заказать услугу</a>
         </section>
@@ -50,6 +49,10 @@
                     <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
+        </section>
+        <section>
+            <h2>Чем мы занимаемся</h2>
+
         </section>
         <section>
             <h2>Наша команда</h2>
