--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
 
         <nav>
-            <a href="">Web Studio</a>
+            <a href=""><span>Web</span> Studio</a>
 
             <ul>
                 <li><a href="">Студия</a></li>
@@ -32,19 +32,19 @@
         <section>
             <h2>Наши преимущества</h2>
             <ul>
-                <li><img src="./img/img_3.svg" alt="" width="65,32px">
+                <li><img src="./img/img_3.svg" alt="Внимание к деталям" width="65,32px">
                     <h3>Внимание к деталям</h3>
                     <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
-                <li><img src="./img/img_4.svg" alt="" width="66,96px">
+                <li><img src="./img/img_4.svg" alt="Пунктуальность" width="66,96px">
                     <h3>Пунктуальность</h3>
                     <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
-                <li><img src="./img/img_5.svg" alt="" width="70px">
+                <li><img src="./img/img_5.svg" alt="Планирование" width="70px">
                     <h3>Планирование</h3>
                     <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
-                <li><img src="./img/img_6.svg" alt="" width="54,83px">
+                <li><img src="./img/img_6.svg" alt="Современные технологии" width="54,83px">
                     <h3>Современные технологии</h3>
                     <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
@@ -52,46 +52,56 @@
         </section>
         <section>
             <h2>Чем мы занимаемся</h2>
-
+            <ul>
+            <li><img src="./img/what-we-doing-1.png" alt="Десктопные приложения" width="370px">
+                <p>Десктопные приложения</p>
+            </li>
+            <li><img src="./img/what-we-doing-2.png" alt="Мобильные приложения" width="370px">
+                <p>Мобильные приложения</p>
+            </li>
+            <li><img src="./img/what-we-doing-3.png" alt="Дизайнерские решения" width="370px">
+                <p>Дизайнерские решения</p>
+            </li>
+        </ul>
         </section>
         <section>
             <h2>Наша команда</h2>
             <ul>
-                <li><img src="./img/img1_1.jpg" alt="" width="450px">
+                <li><img src="./img/img1_1.jpg" alt="John Smith" width="450px">
                     <h3>John Smith</h3>
                     <p>Product Designer</p>
                     <ul>
-                    <li><a href=""><img src="./img/instagram2.svg" alt="" width="20px"></a></li>
-                    <li><a href=""><img src="./img/Vector.svg" alt="" width="20px"></a></li>
-                    <li><a href=""><img src="./img/facebook.svg" alt="" width="20px"></a></li>
-                    <li><a href=""><img src="./img/linkedin1.svg" alt="" width="20px"></a></li>
+                    <li><a href=""><img src="./img/instagram2.svg" alt="instagram" width="20px"></a></li>
+                    <li><a href=""><img src="./img/Vector.svg" alt="twitter" width="20px"></a></li>
+                    <li><a href=""><img src="./img/facebook.svg" alt="facebook" width="20px"></a></li>
+                    <li><a href=""><img src="./img/linkedin1.svg" alt="linkedin" width="20px"></a></li>
                     </ul>
                 </li>
-                <li><img src="./img/img1_2.jpg" alt="" width="450px">
+                <li><img src="./img/img1_2.jpg" alt="Marta Stewart" width="450px">
                     <h3>Marta Stewart</h3>
                     <p>Frontend Developer</p>
                     <ul>
-                        <li><a href=""><img src="./img/instagram2.svg" alt="" width="20px"></a></li>
+                        <li><a href=""><img src="./img/instagram2.svg" alt="instagram" width="20px"></a></li>
                         <li><a href=""><img src="./img/Vector.svg" alt="" width="20px"></a></li>
                         <li><a href=""><img src="./img/facebook.svg" alt="" width="20px"></a></li>
                         <li><a href=""><img src="./img/linkedin1.svg" alt="" width="20px"></a></li>
                     </ul>
                 </li>
-                <li><img src="./img/img1_3.jpg" alt="" width="450px">
+                <li><img src="./img/img1_3.jpg" alt="Robert Jakis" width="450px">
                     <h3>Robert Jakis</h3>
                     <p>Marketing</p>
                     <ul>
-                        <li><a href=""><img src="./img/instagram2.svg" alt="" width="20px"></a></li>
+                        <li><a href=""><img src="./img/instagram2.svg" alt="instagram" width="20px"></a></li>
                         <li><a href=""><img src="./img/Vector.svg" alt="" width="20px"></a></li>
                         <li><a href=""><img src="./img/facebook.svg" alt="" width="20px"></a></li>
                         <li><a href=""><img src="./img/linkedin1.svg" alt="" width="20px"></a></li>
                     </ul>
                 </li>
-                <li><img src="./img/img1_4.jpg" alt="" width="450px">
+                <li><img src="./img/img1_4.jpg" alt="Martin Doe" width="450px">
                     <h3>Martin Doe</h3>
                     <p>UI Designer</p>
                     <ul>
-                        <li><a href=""><img src="./img/instagram2.svg" alt="" width="20px"></a></li>
+                        <li><a href=""><img src="./img/instagram2.svg" alt="instagram" width="20px"></a></li>
                         <li><a href=""><img src="./img/Vector.svg" alt="" width="20px"></a></li>
                         <li><a href=""><img src="./img/facebook.svg" alt="" width="20px"></a></li>
                         <li><a href=""><img src="./img/linkedin1.svg" alt="" width="20px"></a></li>
@@ -112,7 +122,7 @@
         </section>
     </main>
     <footer>
-        <a href="">Web Studio</a>
+        <a href=""><span>Web</span> Studio</a>
             <p>г. Киев, пр-т Леси Украинки, 26</p>
             <ul>
                 <li><p>info@example.com</p></li>
