--- a/index.html
+++ b/index.html
@@ -71,40 +71,40 @@
                     <h3>John Smith</h3>
                     <p>Product Designer</p>
                     <ul>
-                    <li><a href=""><img src="./img/instagram2.svg" alt="instagram" width="20px"></a></li>
-                    <li><a href=""><img src="./img/Vector.svg" alt="twitter" width="20px"></a></li>
-                    <li><a href=""><img src="./img/facebook.svg" alt="facebook" width="20px"></a></li>
-                    <li><a href=""><img src="./img/linkedin1.svg" alt="linkedin" width="20px"></a></li>
+                    <li><a href="" aria-label="instagram"></a></li>
+                    <li><a href="" aria-label="twitter"></a></li>
+                    <li><a href="" aria-label="facebook"></a></li>
+                    <li><a href="" aria-label="linkedin"></a></li>
                     </ul>
                 </li>
                 <li><img src="./img/img1_2.jpg" alt="Marta Stewart" width="450px">
                     <h3>Marta Stewart</h3>
                     <p>Frontend Developer</p>
                     <ul>
-                        <li><a href=""><img src="./img/instagram2.svg" alt="instagram" width="20px"></a></li>
-                        <li><a href=""><img src="./img/Vector.svg" alt="" width="20px"></a></li>
-                        <li><a href=""><img src="./img/facebook.svg" alt="" width="20px"></a></li>
-                        <li><a href=""><img src="./img/linkedin1.svg" alt="" width="20px"></a></li>
+                        <li><a href="" aria-label="instagram"></a></li>
+                        <li><a href="" aria-label="twitter"></a></li>
+                        <li><a href="" aria-label="facebook"></a></li>
+                        <li><a href="" aria-label="linkedin"></a></li>
                     </ul>
                 </li>
                 <li><img src="./img/img1_3.jpg" alt="Robert Jakis" width="450px">
                     <h3>Robert Jakis</h3>
                     <p>Marketing</p>
                     <ul>
-                        <li><a href=""><img src="./img/instagram2.svg" alt="instagram" width="20px"></a></li>
-                        <li><a href=""><img src="./img/Vector.svg" alt="" width="20px"></a></li>
-                        <li><a href=""><img src="./img/facebook.svg" alt="" width="20px"></a></li>
-                        <li><a href=""><img src="./img/linkedin1.svg" alt="" width="20px"></a></li>
+                    <li><a href="" aria-label="instagram"></a></li>
+                    <li><a href="" aria-label="twitter"></a></li>
+                    <li><a href="" aria-label="facebook"></a></li>
+                    <li><a href="" aria-label="linkedin"></a></li>
                     </ul>
                 </li>
                 <li><img src="./img/img1_4.jpg" alt="Martin Doe" width="450px">
                     <h3>Martin Doe</h3>
                     <p>UI Designer</p>
                     <ul>
-                        <li><a href=""><img src="./img/instagram2.svg" alt="instagram" width="20px"></a></li>
-                        <li><a href=""><img src="./img/Vector.svg" alt="" width="20px"></a></li>
-                        <li><a href=""><img src="./img/facebook.svg" alt="" width="20px"></a></li>
-                        <li><a href=""><img src="./img/linkedin1.svg" alt="" width="20px"></a></li>
+                        <li><a href="" aria-label="instagram"></a></li>
+                        <li><a href="" aria-label="twitter"></a></li>
+                        <li><a href="" aria-label="facebook"></a></li>
+                        <li><a href="" aria-label="linkedin"></a></li>
                     </ul>
                 </li>
             </ul>
@@ -130,10 +130,10 @@
             </ul>
         <p>присоединяйтесь</p>
         <ul>
-            <li><a href=""><img src="./img/instagram2.svg" alt="" width="20px"></a></li>
-            <li><a href=""><img src="./img/Vector.svg" alt="" width="20px"></a></li>
-            <li><a href=""><img src="./img/facebook.svg" alt="" width="20px"></a></li>
-            <li><a href=""><img src="./img/linkedin1.svg" alt="" width="20px"></a></li>
+        <li><a href="" aria-label="instagram"></a></li>
+        <li><a href="" aria-label="twitter"></a></li>
+        <li><a href="" aria-label="facebook"></a></li>
+        <li><a href="" aria-label="linkedin"></a></li>
         </ul>
         <form action="handler.php">
             <strong>Подпишитесь на рассылку</strong>
