--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
     <header>
 
         <nav>
-            <a href=""><span>Web</span> Studio</a>
+            <a href="./index.html"><span>Web</span> Studio</a>
 
             <ul>
-                <li><a href="">Студия</a></li>
-                <li><a href="">Портфолио</a></li>
+                <li><a href="./index.html">Студия</a></li>
+                <li><a href="./portfolio.html">Портфолио</a></li>
                 <li><a href="">Контакты</a></li>
             </ul>
         </nav>
 
         <ul>
-            <li><img src="./img/img_1.svg" alt="" width="16"><a href="">info@devstudio.com</a></li>
-            <li><img src="./img/img_2.svg" alt="" width="10px"><a href="">+38 096 111 11 11</a></li>
+            <li><a href="">info@devstudio.com</a>
+            <li><a href="">+38 096 111 11 11</a></li>
         </ul>    
     </header>
     <main>
