--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
         <section>
             <ul>
                 <li>
-                    <img src="" alt="">
+                    <img src="./img-portfolio/img-1.png" alt="Технокряк">
                     <h2>Технокряк</h2>
                     <p>Веб-сайт</p>
                     <p> Технокряк это современная площадка распространения коронавируса.
@@ -49,7 +49,7 @@
                     </p>
                 </li>
                 <li>
-                    <img src="" alt="">
+                    <img src="./img-portfolio/img-2.png" alt="Постер New Orlean vs Golden ...">
                     <h2>Постер New Orlean vs Golden ...</h2>
                     <p>Дизайн</p>
                     <p> Технокряк это современная площадка распространения коронавируса.
@@ -58,38 +58,38 @@
                     </p>
                 </li>
                 <li>
-                    <img src="" alt="">
+                    <img src="./img-portfolio/img-3.png" alt="Ресторан Seafood">
                     <h2>Ресторан Seafood</h2>
                     <p>Приложение</p>
                 </li>
                 <li>
-                    <img src="" alt="">
+                    <img src="./img-portfolio/img-4.png" alt="Проект Prime">
                     <h2>Проект Prime</h2>
                     <p>Маркетинг</p>
                 </li>
                 <li>
-                    <img src="" alt="">
+                    <img src="./img-portfolio/img-5.png" alt="Проект Boxes">
                     <h2>Проект Boxes</h2>
                     <p>Приложение</p>
                 </li>
                 <li>
-                    <img src="" alt="">
+                    <img src="./img-portfolio/img-6.png" alt="Inspiration has no Borders">
                     <h2>Inspiration has no Borders</h2>
                     <p>Веб-сайт</p>
                 </li>
                 <li>
-                    <img src="" alt="">
+                    <img src="./img-portfolio/img-7.png" alt="Издание Limited Edition">
                     <h2>Издание Limited Edition</h2>
                     <p>Дизайн</p>
                 </li>
                 <li>
-                    <img src="" alt="">
+                    <img src="./img-portfolio/img-8.png" alt="Проект LAB">
                     <h2>Проект LAB</h2>
                     <p>Маркетинг</p>
                     
                 </li>
                 <li>
-                    <img src="" alt="">
+                    <img src="./img-portfolio/img-9.png" alt="Growing Business">
                     <h2>Growing Business</h2>
                     <p>Приложение</p>
                 </li>
