--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
         <section>
             <h2>Наши преимущества</h2>
             <ul>
-                <li><img src="./img/img_3.svg" alt="Внимание к деталям" width="65,32px">
+                <li><img src="./img-index/img-1.svg" alt="Внимание к деталям" width="65,32px">
                     <h3>Внимание к деталям</h3>
                     <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
-                <li><img src="./img/img_4.svg" alt="Пунктуальность" width="66,96px">
+                <li><img src="./img-index/img-2.svg" alt="Пунктуальность" width="66,96px">
                     <h3>Пунктуальность</h3>
                     <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
-                <li><img src="./img/img_5.svg" alt="Планирование" width="70px">
+                <li><img src="./img-index/img-3.svg" alt="Планирование" width="70px">
                     <h3>Планирование</h3>
                     <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
-                <li><img src="./img/img_6.svg" alt="Современные технологии" width="54,83px">
+                <li><img src="./img-index/img-4.svg" alt="Современные технологии" width="54,83px">
                     <h3>Современные технологии</h3>
                     <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
@@ -53,13 +53,13 @@
         <section>
             <h2>Чем мы занимаемся</h2>
             <ul>
-            <li><img src="./img/what-we-doing-1.png" alt="Десктопные приложения" width="370px">
+            <li><img src="./img-index/img-what-doing-1.jpg" alt="Десктопные приложения" width="370px">
                 <p>Десктопные приложения</p>
             </li>
-            <li><img src="./img/what-we-doing-2.png" alt="Мобильные приложения" width="370px">
+            <li><img src="./img-index/img-what-doing-2.jpg" alt="Мобильные приложения" width="370px">
                 <p>Мобильные приложения</p>
             </li>
-            <li><img src="./img/what-we-doing-3.png" alt="Дизайнерские решения" width="370px">
+            <li><img src="./img-index/img-what-doing-3.jpg" alt="Дизайнерские решения" width="370px">
                 <p>Дизайнерские решения</p>
             </li>
         </ul>
@@ -67,7 +67,7 @@
         <section>
             <h2>Наша команда</h2>
             <ul>
-                <li><img src="./img/img1_1.jpg" alt="John Smith" width="450px">
+                <li><img src="./img-index/img-team-1.jpg" alt="John Smith" width="450px">
                     <h3>John Smith</h3>
                     <p>Product Designer</p>
                     <ul>
@@ -77,7 +77,7 @@
                     <li><a href="" aria-label="linkedin"></a></li>
                     </ul>
                 </li>
-                <li><img src="./img/img1_2.jpg" alt="Marta Stewart" width="450px">
+                <li><img src="./img-index/img-team-2.jpg" alt="Marta Stewart" width="450px">
                     <h3>Marta Stewart</h3>
                     <p>Frontend Developer</p>
                     <ul>
@@ -87,7 +87,7 @@
                         <li><a href="" aria-label="linkedin"></a></li>
                     </ul>
                 </li>
-                <li><img src="./img/img1_3.jpg" alt="Robert Jakis" width="450px">
+                <li><img src="./img-index/img-team-3.jpg" alt="Robert Jakis" width="450px">
                     <h3>Robert Jakis</h3>
                     <p>Marketing</p>
                     <ul>
@@ -97,7 +97,7 @@
                     <li><a href="" aria-label="linkedin"></a></li>
                     </ul>
                 </li>
-                <li><img src="./img/img1_4.jpg" alt="Martin Doe" width="450px">
+                <li><img src="./img-index/img-team-4.jpg" alt="Martin Doe" width="450px">
                     <h3>Martin Doe</h3>
                     <p>UI Designer</p>
                     <ul>
@@ -112,17 +112,17 @@
         <section>
             <h2>Постоянные клиенты</h2>
             <ul>
-                <li><a href=""><img src="./img/logo_1.svg" alt="" width="44,27px"></a></li>
-                <li><a href=""><img src="./img/logo_2.svg" alt="" width="40px"></a></li>
-                <li><a href=""><img src="./img/logo_3.svg" alt="" width="41px"></a></li>
-                <li><a href=""><img src="./img/logo_4.svg" alt="" width="79,66px"></a></li>
-                <li><a href=""><img src="./img/logo_5.svg" alt="" width="59px"></a></li>
-                <li><a href=""><img src="./img/logo_6.svg" alt="" width="88,48px"></a></li>
+                <li><a href=""><img src="./img-index/logo-1.svg" alt="logo" width="44,27px"></a></li>
+                <li><a href=""><img src="./img-index/logo-2.svg" alt="logo" width="40px"></a></li>
+                <li><a href=""><img src="./img-index/logo-3.svg" alt="logo" width="41px"></a></li>
+                <li><a href=""><img src="./img-index/logo-4.svg" alt="logo" width="79,66px"></a></li>
+                <li><a href=""><img src="./img-index/logo-5.svg" alt="logo" width="59px"></a></li>
+                <li><a href=""><img src="./img-index/logo-6.svg" alt="logo" width="88,48px"></a></li>
             </ul>
         </section>
     </main>
     <footer>
-        <a href=""><span>Web</span> Studio</a>
+        <a href="./index.html"><span>Web</span> Studio</a>
             <p>г. Киев, пр-т Леси Украинки, 26</p>
             <ul>
                 <li><p>info@example.com</p></li>
