--- a/portfolio.html
+++ b/portfolio.html
@@ -97,7 +97,7 @@
         </section>
     </main>
     <footer>
-        <a href=""><span>Web</span> Studio</a>
+        <a href="./index.html"><span>Web</span> Studio</a>
         <p>г. Киев, пр-т Леси Украинки, 26</p>
         <ul>
             <li>
