--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
         <section>
             <ul>
                 <li>
-                    <img src="./img-portfolio/img-1.png" alt="Технокряк">
+                    <img src="./img-portfolio/img-1.png" alt="Технокряк" width="450px">
                     <h2>Технокряк</h2>
                     <p>Веб-сайт</p>
                     <p> Технокряк это современная площадка распространения коронавируса.
@@ -49,47 +49,43 @@
                     </p>
                 </li>
                 <li>
-                    <img src="./img-portfolio/img-2.png" alt="Постер New Orlean vs Golden ...">
+                    <img src="./img-portfolio/img-2.png" alt="Постер New Orlean vs Golden ..." width="450px">
                     <h2>Постер New Orlean vs Golden ...</h2>
                     <p>Дизайн</p>
-                    <p> Технокряк это современная площадка распространения коронавируса.
-                        Компании используют эту платформу для цифрового
-                        шпионажа и атак на защищённые сервера конкурентов.
-                    </p>
                 </li>
                 <li>
-                    <img src="./img-portfolio/img-3.png" alt="Ресторан Seafood">
+                    <img src="./img-portfolio/img-3.png" alt="Ресторан Seafood" width="450px">
                     <h2>Ресторан Seafood</h2>
                     <p>Приложение</p>
                 </li>
                 <li>
-                    <img src="./img-portfolio/img-4.png" alt="Проект Prime">
+                    <img src="./img-portfolio/img-4.png" alt="Проект Prime" width="450px">
                     <h2>Проект Prime</h2>
                     <p>Маркетинг</p>
                 </li>
                 <li>
-                    <img src="./img-portfolio/img-5.png" alt="Проект Boxes">
+                    <img src="./img-portfolio/img-5.png" alt="Проект Boxes" width="450px">
                     <h2>Проект Boxes</h2>
                     <p>Приложение</p>
                 </li>
                 <li>
-                    <img src="./img-portfolio/img-6.png" alt="Inspiration has no Borders">
+                    <img src="./img-portfolio/img-6.png" alt="Inspiration has no Borders" width="450px">
                     <h2>Inspiration has no Borders</h2>
                     <p>Веб-сайт</p>
                 </li>
                 <li>
-                    <img src="./img-portfolio/img-7.png" alt="Издание Limited Edition">
+                    <img src="./img-portfolio/img-7.png" alt="Издание Limited Edition" width="450px">
                     <h2>Издание Limited Edition</h2>
                     <p>Дизайн</p>
                 </li>
                 <li>
-                    <img src="./img-portfolio/img-8.png" alt="Проект LAB">
+                    <img src="./img-portfolio/img-8.png" alt="Проект LAB" width="450px">
                     <h2>Проект LAB</h2>
                     <p>Маркетинг</p>
                     
                 </li>
                 <li>
-                    <img src="./img-portfolio/img-9.png" alt="Growing Business">
+                    <img src="./img-portfolio/img-9.png" alt="Growing Business" width="450px">
                     <h2>Growing Business</h2>
                     <p>Приложение</p>
                 </li>
