--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/styles.css">
     <title>Document</title>
 </head>
 <body>
     <header>
 
         <nav>
-            <a href="./index.html"><span>Web</span> Studio</a>
+            <a href="./index.html" class="main-logo"><span>Web</span> Studio</a>
 
-            <ul>
-                <li><a href="./index.html">Студия</a></li>
-                <li><a href="./portfolio.html">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
+            <ul class="nav-list">
+                <li class="nav-li"><a href="./index.html">Студия</a></li>
+                <li class="nav-li"><a href="./portfolio.html">Портфолио</a></li>
+                <li class="nav-li"><a href="">Контакты</a></li>
             </ul>
         </nav>
 
@@ -122,14 +123,14 @@
         </section>
     </main>
     <footer>
-        <a href="./index.html"><span>Web</span> Studio</a>
+        <a href="./index.html" class="footer-logo"><span class="footer-span">Web</span> Studio</a>
             <p>г. Киев, пр-т Леси Украинки, 26</p>
             <ul>
                 <li><p>info@example.com</p></li>
                 <li><p>+38 099 111 11 11</p></li>
             </ul>
         <p>присоединяйтесь</p>
-        <ul>
+        <ul >
         <li><a href="" aria-label="instagram"></a></li>
         <li><a href="" aria-label="twitter"></a></li>
         <li><a href="" aria-label="facebook"></a></li>
