--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styles.css">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <header>
@@ -13,22 +13,22 @@
         <nav>
             <a href="./index.html" class="main-logo"><span>Web</span> Studio</a>
 
-            <ul class="nav-list">
-                <li class="nav-li"><a href="./index.html">Студия</a></li>
-                <li class="nav-li"><a href="./portfolio.html">Портфолио</a></li>
-                <li class="nav-li"><a href="">Контакты</a></li>
+            <ul class="site-nav">
+                <li class="site-nav-link"><a href="./index.html">Студия</a></li>
+                <li class="site-nav-link"><a href="./portfolio.html">Портфолио</a></li>
+                <li class="site-nav-link"><a href="">Контакты</a></li>
             </ul>
         </nav>
 
         <ul>
-            <li><a href="">info@devstudio.com</a>
-            <li><a href="">+38 096 111 11 11</a></li>
+            <li class="link-contacts"><a href="">info@devstudio.com</a>
+            <li class="link-contacts"><a href="">+38 096 111 11 11</a></li>
         </ul>    
     </header>
     <main>
         <section>
-            <h1>Эффективные решения для вашего бизнеса</h1>
-            <a href="">Заказать услугу</a>
+            <h1 class="hero">Эффективные решения для вашего бизнеса</h1>
+            <a href="" class="main-link">Заказать услугу</a>
         </section>
         <section>
             <h2>Наши преимущества</h2>
@@ -55,20 +55,20 @@
             <h2>Чем мы занимаемся</h2>
             <ul>
             <li><img src="./img-index/img-what-doing-1.jpg" alt="Десктопные приложения" width="370px">
-                <p>Десктопные приложения</p>
+                <p class="what-doing-words">Десктопные приложения</p>
             </li>
             <li><img src="./img-index/img-what-doing-2.jpg" alt="Мобильные приложения" width="370px">
-                <p>Мобильные приложения</p>
+                <p class="what-doing-words">Мобильные приложения</p>
             </li>
             <li><img src="./img-index/img-what-doing-3.jpg" alt="Дизайнерские решения" width="370px">
-                <p>Дизайнерские решения</p>
+                <p class="what-doing-words">Дизайнерские решения</p>
             </li>
         </ul>
         </section>
         <section>
             <h2>Наша команда</h2>
             <ul>
-                <li><img src="./img-index/img-team-1.jpg" alt="John Smith" width="450px">
+                <li><img src="./img-index/img-team-1.jpg" alt="John Smith" width="270px">
                     <h3>John Smith</h3>
                     <p>Product Designer</p>
                     <ul>
@@ -78,7 +78,7 @@
                     <li><a href="" aria-label="linkedin"></a></li>
                     </ul>
                 </li>
-                <li><img src="./img-index/img-team-2.jpg" alt="Marta Stewart" width="450px">
+                <li><img src="./img-index/img-team-2.jpg" alt="Marta Stewart" width="270px">
                     <h3>Marta Stewart</h3>
                     <p>Frontend Developer</p>
                     <ul>
@@ -88,7 +88,7 @@
                         <li><a href="" aria-label="linkedin"></a></li>
                     </ul>
                 </li>
-                <li><img src="./img-index/img-team-3.jpg" alt="Robert Jakis" width="450px">
+                <li><img src="./img-index/img-team-3.jpg" alt="Robert Jakis" width="270px">
                     <h3>Robert Jakis</h3>
                     <p>Marketing</p>
                     <ul>
@@ -98,7 +98,7 @@
                     <li><a href="" aria-label="linkedin"></a></li>
                     </ul>
                 </li>
-                <li><img src="./img-index/img-team-4.jpg" alt="Martin Doe" width="450px">
+                <li><img src="./img-index/img-team-4.jpg" alt="Martin Doe" width="270px">
                     <h3>Martin Doe</h3>
                     <p>UI Designer</p>
                     <ul>
@@ -112,24 +112,24 @@
         </section>
         <section>
             <h2>Постоянные клиенты</h2>
-            <ul>
-                <li><a href=""><img src="./img-index/logo-1.svg" alt="logo" width="44,27px"></a></li>
-                <li><a href=""><img src="./img-index/logo-2.svg" alt="logo" width="40px"></a></li>
-                <li><a href=""><img src="./img-index/logo-3.svg" alt="logo" width="41px"></a></li>
-                <li><a href=""><img src="./img-index/logo-4.svg" alt="logo" width="79,66px"></a></li>
-                <li><a href=""><img src="./img-index/logo-5.svg" alt="logo" width="59px"></a></li>
-                <li><a href=""><img src="./img-index/logo-6.svg" alt="logo" width="88,48px"></a></li>
+            <ul class="logo">
+                <li><div class="logo-block"><a href=""><img src="./img-index/logo-4.svg" alt="logo" width="44,27px" class="logo-img"></a></div></li>
+                <li><div class="logo-block"><a href=""><img src="./img-index/logo-1.svg" alt="logo" width="40px" class="logo-img"></a></div></li>
+                <li><div class="logo-block"><a href=""><img src="./img-index/logo-2.svg" alt="logo" width="41px" class="logo-img"></a></div></li>
+                <li><div class="logo-block"><a href=""><img src="./img-index/logo-3.svg" alt="logo" width="79,66px" class="logo-img"></a></div></li>
+                <li ><div class="logo-block"><a href=""><img src="./img-index/logo-5.svg" alt="logo" width="59px" class="logo-img"></a></div></li>
+                <li><div class="logo-block"><a href=""><img src="./img-index/logo-6.svg" alt="logo" width="88,48px" class="logo-img"></a></div></li>
             </ul>
         </section>
     </main>
-    <footer>
+    <footer class="footer">
         <a href="./index.html" class="footer-logo"><span class="footer-span">Web</span> Studio</a>
-            <p>г. Киев, пр-т Леси Украинки, 26</p>
+            <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
             <ul>
                 <li><p>info@example.com</p></li>
                 <li><p>+38 099 111 11 11</p></li>
             </ul>
-        <p>присоединяйтесь</p>
+        <p class="come-on">присоединяйтесь</p>
         <ul >
         <li><a href="" aria-label="instagram"></a></li>
         <li><a href="" aria-label="twitter"></a></li>
@@ -137,7 +137,7 @@
         <li><a href="" aria-label="linkedin"></a></li>
         </ul>
         <form action="handler.php">
-            <strong>Подпишитесь на рассылку</strong>
+            <strong class="join">Подпишитесь на рассылку</strong>
             <input type="text"  placeholder="E-mail" width="450px">
         </form>
     </footer>
