added css for index.html

--- a/index.html
+++ b/index.html
@@ -9,50 +9,55 @@
 </head>
 <body>
     <header>
+        <!-- навигация ""-->
 
         <nav>
             <a href="./index.html" class="main-logo"><span>Web</span> Studio</a>
 
             <ul class="site-nav">
-                <li class="site-nav-link"><a href="./index.html">Студия</a></li>
-                <li class="site-nav-link"><a href="./portfolio.html">Портфолио</a></li>
-                <li class="site-nav-link"><a href="">Контакты</a></li>
+                <li><a href="./index.html" class="link">Студия</a></li>
+                <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+                <li><a href="" class="link">Контакты</a></li>
             </ul>
-        </nav>
+        
 
-        <ul>
-            <li class="link-contacts"><a href="">info@devstudio.com</a>
-            <li class="link-contacts"><a href="">+38 096 111 11 11</a></li>
-        </ul>    
+            <ul class="contacts-nav">
+                <li><a href="" class="link">info@devstudio.com</a></li>
+                <li><a href="" class="link">+38 096 111 11 11</a></li>
+            </ul>
+        </nav>    
     </header>
     <main>
+        <!-- секция hero -->
         <section>
-            <h1 class="hero">Эффективные решения для вашего бизнеса</h1>
-            <a href="" class="main-link">Заказать услугу</a>
+            <h1 class="hero heading">Эффективные решения для вашего бизнеса</h1>
+            <a href="" class="button">Заказать услугу</a>
         </section>
+        <!-- секция "Наши преимущества"-->
         <section>
-            <h2>Наши преимущества</h2>
+            <h2 class="heading">Наши преимущества</h2>
             <ul>
                 <li><img src="./img-index/img-1.svg" alt="Внимание к деталям" width="65,32px">
-                    <h3>Внимание к деталям</h3>
+                    <h3 class="heading">Внимание к деталям</h3>
                     <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li><img src="./img-index/img-2.svg" alt="Пунктуальность" width="66,96px">
-                    <h3>Пунктуальность</h3>
+                    <h3 class="heading">Пунктуальность</h3>
                     <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li><img src="./img-index/img-3.svg" alt="Планирование" width="70px">
-                    <h3>Планирование</h3>
+                    <h3 class="heading">Планирование</h3>
                     <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li><img src="./img-index/img-4.svg" alt="Современные технологии" width="54,83px">
-                    <h3>Современные технологии</h3>
+                    <h3 class="heading">Современные технологии</h3>
                     <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
         </section>
+        <!-- секция "Чем мы занимаемся" -->
         <section>
-            <h2>Чем мы занимаемся</h2>
+            <h2 class="heading">Чем мы занимаемся</h2>
             <ul>
             <li><img src="./img-index/img-what-doing-1.jpg" alt="Десктопные приложения" width="370px">
                 <p class="what-doing-words">Десктопные приложения</p>
@@ -65,8 +70,9 @@
             </li>
         </ul>
         </section>
+        <!-- секция "Наша команда" -->
         <section>
-            <h2>Наша команда</h2>
+            <h2 class="heading">Наша команда</h2>
             <ul>
                 <li><img src="./img-index/img-team-1.jpg" alt="John Smith" width="270px">
                     <h3>John Smith</h3>
@@ -110,26 +116,28 @@
                 </li>
             </ul>
         </section>
+        <!-- секция "Постоянные клиенты" -->
         <section>
-            <h2>Постоянные клиенты</h2>
+            <h2 class="heading">Постоянные клиенты</h2>
             <ul class="logo">
-                <li><div class="logo-block"><a href=""><img src="./img-index/logo-4.svg" alt="logo" width="44,27px" class="logo-img"></a></div></li>
-                <li><div class="logo-block"><a href=""><img src="./img-index/logo-1.svg" alt="logo" width="40px" class="logo-img"></a></div></li>
-                <li><div class="logo-block"><a href=""><img src="./img-index/logo-2.svg" alt="logo" width="41px" class="logo-img"></a></div></li>
-                <li><div class="logo-block"><a href=""><img src="./img-index/logo-3.svg" alt="logo" width="79,66px" class="logo-img"></a></div></li>
-                <li ><div class="logo-block"><a href=""><img src="./img-index/logo-5.svg" alt="logo" width="59px" class="logo-img"></a></div></li>
-                <li><div class="logo-block"><a href=""><img src="./img-index/logo-6.svg" alt="logo" width="88,48px" class="logo-img"></a></div></li>
+                <li><a href=""><img src="./img-index/logo-4.svg" alt="logo" width="44,27px" class="logo-img"></a></li>
+                <li><a href=""><img src="./img-index/logo-1.svg" alt="logo" width="40px" class="logo-img"></a></li>
+                <li><a href=""><img src="./img-index/logo-2.svg" alt="logo" width="41px" class="logo-img"></a></li>
+                <li><a href=""><img src="./img-index/logo-3.svg" alt="logo" width="79,66px" class="logo-img"></a></li>
+                <li ><a href=""><img src="./img-index/logo-5.svg" alt="logo" width="59px" class="logo-img"></a></li>
+                <li><a href=""><img src="./img-index/logo-6.svg" alt="logo" width="88,48px" class="logo-img"></a></li>
             </ul>
         </section>
     </main>
+    <!-- подвал сайта -->
     <footer class="footer">
-        <a href="./index.html" class="footer-logo"><span class="footer-span">Web</span> Studio</a>
-            <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
+        <a href="./index.html" class="footer-logo"><span >Web</span> Studio</a>
+            <p class="appeals">г. Киев, пр-т Леси Украинки, 26</p>
             <ul>
                 <li><p>info@example.com</p></li>
                 <li><p>+38 099 111 11 11</p></li>
             </ul>
-        <p class="come-on">присоединяйтесь</p>
+        <p class="appeals">присоединяйтесь</p>
         <ul >
         <li><a href="" aria-label="instagram"></a></li>
         <li><a href="" aria-label="twitter"></a></li>
@@ -137,9 +145,10 @@
         <li><a href="" aria-label="linkedin"></a></li>
         </ul>
         <form action="handler.php">
-            <strong class="join">Подпишитесь на рассылку</strong>
+            <strong class="appeals">Подпишитесь на рассылку</strong>
             <input type="text"  placeholder="E-mail" width="450px">
         </form>
+        <a href="" class="button">Подписаться</a>
     </footer>
 </body>
 </html>
