--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="./index.html" class="main-logo"><span>Web</span> Studio</a>
 
             <ul class="site-nav">
-                <li><a href="./index.html" class="link">Студия</a></li>
+                <li><a href="./index.html" class="link current">Студия</a></li>
                 <li><a href="./portfolio.html" class="link">Портфолио</a></li>
                 <li><a href="" class="link">Контакты</a></li>
             </ul>
@@ -75,7 +75,7 @@
             <h2 class="heading">Наша команда</h2>
             <ul>
                 <li><img src="./img-index/img-team-1.jpg" alt="John Smith" width="270px">
-                    <h3>John Smith</h3>
+                    <h3 class="heading">John Smith</h3>
                     <p>Product Designer</p>
                     <ul>
                     <li><a href="" aria-label="instagram"></a></li>
@@ -85,7 +85,7 @@
                     </ul>
                 </li>
                 <li><img src="./img-index/img-team-2.jpg" alt="Marta Stewart" width="270px">
-                    <h3>Marta Stewart</h3>
+                    <h3 class="heading">Marta Stewart</h3>
                     <p>Frontend Developer</p>
                     <ul>
                         <li><a href="" aria-label="instagram"></a></li>
@@ -95,7 +95,7 @@
                     </ul>
                 </li>
                 <li><img src="./img-index/img-team-3.jpg" alt="Robert Jakis" width="270px">
-                    <h3>Robert Jakis</h3>
+                    <h3 class="heading">Robert Jakis</h3>
                     <p>Marketing</p>
                     <ul>
                     <li><a href="" aria-label="instagram"></a></li>
@@ -105,7 +105,7 @@
                     </ul>
                 </li>
                 <li><img src="./img-index/img-team-4.jpg" alt="Martin Doe" width="270px">
-                    <h3>Martin Doe</h3>
+                    <h3 class="heading">Martin Doe</h3>
                     <p>UI Designer</p>
                     <ul>
                         <li><a href="" aria-label="instagram"></a></li>
