--- a/portfolio.html
+++ b/portfolio.html
@@ -115,7 +115,7 @@
             <strong class="appeals">Подпишитесь на рассылку</strong>
             <input type="text" placeholder="E-mail" width="450px">
         </form>
-        <a href="" class="button">Подписаться</a>
+        <input type="button" class="button" value="Подписаться">
     </footer>
 </body>
 </html>
