--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <strong class="appeals">Подпишитесь на рассылку</strong>
             <input type="text"  placeholder="E-mail" width="450px">
         </form>
-        <a href="" class="button">Подписаться</a>
+        <input type="button" class="button" value="Подписаться">
     </footer>
 </body>
 </html>
