--- a/portfolio.html
+++ b/portfolio.html
@@ -29,11 +29,11 @@
         <section>
 
             <ul>
-                <li><button type="button">Все</button></li>
-                <li><button type="button">Веб-сайты</button></li>
-                <li><button type="button">Веб-сайты</button></li>
-                <li><button type="button">Дизайн</button></li>
-                <li><button type="button">Маркетинг</button></li>
+                <li><button type="button" class="button">Все</button></li>
+                <li><button type="button" class="button-portfolio">Веб-сайты</button></li>
+                <li><button type="button" class="button-portfolio">Веб-сайты</button></li>
+                <li><button type="button" class="button-portfolio">Дизайн</button></li>
+                <li><button type="button" class="button-portfolio">Маркетинг</button></li>
             </ul>
             
 
@@ -44,7 +44,7 @@
                     <img src="./img-portfolio/img-1.png" alt="Технокряк" width="450px">
                     <h2 class="heading">Технокряк</h2>
                     <p>Веб-сайт</p>
-                    <p> Технокряк это современная площадка распространения коронавируса.
+                    <p class="paragraph"> Технокряк это современная площадка распространения коронавируса.
                         Компании используют эту платформу для цифрового
                         шпионажа и атак на защищённые сервера конкурентов.
                     </p>
@@ -53,42 +53,74 @@
                     <img src="./img-portfolio/img-2.png" alt="Постер New Orlean vs Golden ..." width="450px">
                     <h2 class="heading">Постер New Orlean vs Golden ...</h2>
                     <p>Дизайн</p>
+                    <p class="paragraph"> Технокряк это современная площадка распространения коронавируса.
+                        Компании используют эту платформу для цифрового
+                        шпионажа и атак на защищённые сервера конкурентов.
+                    </p>
                 </li>
                 <li>
                     <img src="./img-portfolio/img-3.png" alt="Ресторан Seafood" width="450px">
                     <h2 class="heading">Ресторан Seafood</h2>
                     <p>Приложение</p>
+                    <p class="paragraph"> Технокряк это современная площадка распространения коронавируса.
+                        Компании используют эту платформу для цифрового
+                        шпионажа и атак на защищённые сервера конкурентов.
+                    </p>
                 </li>
                 <li>
                     <img src="./img-portfolio/img-4.png" alt="Проект Prime" width="450px">
                     <h2 class="heading">Проект Prime</h2>
                     <p>Маркетинг</p>
+                    <p class="paragraph"> Технокряк это современная площадка распространения коронавируса.
+                        Компании используют эту платформу для цифрового
+                        шпионажа и атак на защищённые сервера конкурентов.
+                    </p>
                 </li>
                 <li>
                     <img src="./img-portfolio/img-5.png" alt="Проект Boxes" width="450px">
                     <h2 class="heading">Проект Boxes</h2>
                     <p>Приложение</p>
+                    <p class="paragraph"> Технокряк это современная площадка распространения коронавируса.
+                        Компании используют эту платформу для цифрового
+                        шпионажа и атак на защищённые сервера конкурентов.
+                    </p>
                 </li>
                 <li>
                     <img src="./img-portfolio/img-6.png" alt="Inspiration has no Borders" width="450px">
                     <h2 class="heading">Inspiration has no Borders</h2>
                     <p>Веб-сайт</p>
+                    <p class="paragraph"> Технокряк это современная площадка распространения коронавируса.
+                        Компании используют эту платформу для цифрового
+                        шпионажа и атак на защищённые сервера конкурентов.
+                    </p>
                 </li>
                 <li>
                     <img src="./img-portfolio/img-7.png" alt="Издание Limited Edition" width="450px">
                     <h2 class="heading">Издание Limited Edition</h2>
                     <p>Дизайн</p>
+                    <p class="paragraph"> Технокряк это современная площадка распространения коронавируса.
+                        Компании используют эту платформу для цифрового
+                        шпионажа и атак на защищённые сервера конкурентов.
+                    </p>
                 </li>
                 <li>
                     <img src="./img-portfolio/img-8.png" alt="Проект LAB" width="450px">
                     <h2 class="heading">Проект LAB</h2>
                     <p>Маркетинг</p>
+                    <p class="paragraph"> Технокряк это современная площадка распространения коронавируса.
+                        Компании используют эту платформу для цифрового
+                        шпионажа и атак на защищённые сервера конкурентов.
+                    </p>
                     
                 </li>
                 <li>
                     <img src="./img-portfolio/img-9.png" alt="Growing Business" width="450px">
                     <h2 class="heading">Growing Business</h2>
                     <p>Приложение</p>
+                    <p class="paragraph"> Технокряк это современная площадка распространения коронавируса.
+                        Компании используют эту платформу для цифрового
+                        шпионажа и атак на защищённые сервера конкурентов.
+                    </p>
                 </li>
             </ul>
         </section>
