--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portfolio</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
@@ -43,8 +46,8 @@
                 <li>
                     <a href="">
                         <img src="./img-portfolio/img-1.png" alt="Технокряк" width="450px">
-                        <h2 class="heading">Технокряк</h2>
-                        <p>Веб-сайт</p>
+                        <h2 class="heading-portfolio">Технокряк</h2>
+                        <p class="main-paragraph">Веб-сайт</p>
                         <p class="paragraph"> Технокряк это современная площадка распространения коронавируса.
                             Компании используют эту платформу для цифрового
                             шпионажа и атак на защищённые сервера конкурентов.
@@ -54,8 +57,8 @@
                 <li>
                     <a href="">
                         <img src="./img-portfolio/img-2.png" alt="Постер New Orlean vs Golden ..." width="450px">
-                        <h2 class="heading">Постер New Orlean vs Golden ...</h2>
-                        <p>Дизайн</p>
+                        <h2 class="heading-portfolio">Постер New Orlean vs Golden ...</h2>
+                        <p class="main-paragraph">Дизайн</p>
                         <p class="paragraph"> Технокряк это современная площадка распространения коронавируса.
                             Компании используют эту платформу для цифрового
                             шпионажа и атак на защищённые сервера конкурентов.
@@ -65,8 +68,8 @@
                 <li>
                     <a href="">
                         <img src="./img-portfolio/img-3.png" alt="Ресторан Seafood" width="450px">
-                        <h2 class="heading">Ресторан Seafood</h2>
-                        <p>Приложение</p>
+                        <h2 class="heading-portfolio">Ресторан Seafood</h2>
+                        <p class="main-paragraph">Приложение</p>
                         <p class="paragraph"> Технокряк это современная площадка распространения коронавируса.
                             Компании используют эту платформу для цифрового
                             шпионажа и атак на защищённые сервера конкурентов.
@@ -76,8 +79,8 @@
                 <li>
                     <a href="">
                         <img src="./img-portfolio/img-4.png" alt="Проект Prime" width="450px">
-                        <h2 class="heading">Проект Prime</h2>
-                        <p>Маркетинг</p>
+                        <h2 class="heading-portfolio">Проект Prime</h2>
+                        <p class="main-paragraph">Маркетинг</p>
                         <p class="paragraph"> Технокряк это современная площадка распространения коронавируса.
                             Компании используют эту платформу для цифрового
                             шпионажа и атак на защищённые сервера конкурентов.
@@ -87,8 +90,8 @@
                 <li>
                     <a href="">
                         <img src="./img-portfolio/img-5.png" alt="Проект Boxes" width="450px">
-                        <h2 class="heading">Проект Boxes</h2>
-                        <p>Приложение</p>
+                        <h2 class="heading-portfolio">Проект Boxes</h2>
+                        <p class="main-paragraph">Приложение</p>
                         <p class="paragraph"> Технокряк это современная площадка распространения коронавируса.
                             Компании используют эту платформу для цифрового
                             шпионажа и атак на защищённые сервера конкурентов.
@@ -98,8 +101,8 @@
                 <li>
                     <a href="">
                         <img src="./img-portfolio/img-6.png" alt="Inspiration has no Borders" width="450px">
-                        <h2 class="heading">Inspiration has no Borders</h2>
-                        <p>Веб-сайт</p>
+                        <h2 class="heading-portfolio">Inspiration has no Borders</h2>
+                        <p class="main-paragraph">Веб-сайт</p>
                         <p class="paragraph"> Технокряк это современная площадка распространения коронавируса.
                             Компании используют эту платформу для цифрового
                             шпионажа и атак на защищённые сервера конкурентов.
@@ -109,8 +112,8 @@
                 <li>
                     <a href="">
                         <img src="./img-portfolio/img-7.png" alt="Издание Limited Edition" width="450px">
-                        <h2 class="heading">Издание Limited Edition</h2>
-                        <p>Дизайн</p>
+                        <h2 class="heading-portfolio">Издание Limited Edition</h2>
+                        <p class="main-paragraph">Дизайн</p>
                         <p class="paragraph"> Технокряк это современная площадка распространения коронавируса.
                             Компании используют эту платформу для цифрового
                             шпионажа и атак на защищённые сервера конкурентов.
@@ -120,8 +123,8 @@
                 <li>
                     <a href="">
                         <img src="./img-portfolio/img-8.png" alt="Проект LAB" width="450px">
-                        <h2 class="heading">Проект LAB</h2>
-                        <p>Маркетинг</p>
+                        <h2 class="heading-portfolio">Проект LAB</h2>
+                        <p class="main-paragraph">Маркетинг</p>
                         <p class="paragraph"> Технокряк это современная площадка распространения коронавируса.
                             Компании используют эту платформу для цифрового
                             шпионажа и атак на защищённые сервера конкурентов.
@@ -132,8 +135,8 @@
                 <li>
                     <a href="">
                         <img src="./img-portfolio/img-9.png" alt="Growing Business" width="450px">
-                        <h2 class="heading">Growing Business</h2>
-                        <p>Приложение</p>
+                        <h2 class="heading-portfolio">Growing Business</h2>
+                        <p class="main-paragraph">Приложение</p>
                         <p class="paragraph"> Технокряк это современная площадка распространения коронавируса.
                             Компании используют эту платформу для цифрового
                             шпионажа и атак на защищённые сервера конкурентов.
@@ -145,24 +148,24 @@
     </main>
     <footer class="footer">
         <a href="./index.html" class="footer-logo"><span>Web</span> Studio</a>
-        <p class="appeals">г. Киев, пр-т Леси Украинки, 26</p>
+        <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
         <ul>
             <li>
-                <p>info@example.com</p>
+                <p class="contact-link">info@example.com</p>
             </li>
             <li>
-                <p>+38 099 111 11 11</p>
+                <p class="contact-link">+38 099 111 11 11</p>
             </li>
         </ul>
-        <p class="appeals">присоединяйтесь</p>
+        <p class="join">присоединяйтесь</p>
         <ul>
             <li><a href="" aria-label="instagram"></a></li>
             <li><a href="" aria-label="twitter"></a></li>
-                <li><a href="" aria-label="facebook"></a></li>
+            <li><a href="" aria-label="facebook"></a></li>
             <li><a href="" aria-label="linkedin"></a></li>
         </ul>
         <form action="handler.php">
-            <strong class="appeals">Подпишитесь на рассылку</strong>
+            <strong class="join">Подпишитесь на рассылку</strong>
             <input type="text" placeholder="E-mail" width="450px">
         </form>
         <input type="button" class="button" value="Подписаться">
