--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
@@ -34,11 +37,11 @@
         </section>
         <!-- секция "Наши преимущества"-->
         <section>
-            <h2 class="heading">Наши преимущества</h2>
+            <h2 class="main-heading">Наши преимущества</h2>
             <ul>
                 <li><img src="./img-index/img-1.svg" alt="Внимание к деталям" width="65,32px">
                     <h3 class="heading">Внимание к деталям</h3>
-                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    <p class="advantages-paragraph">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li><img src="./img-index/img-2.svg" alt="Пунктуальность" width="66,96px">
                     <h3 class="heading">Пунктуальность</h3>
@@ -56,7 +59,7 @@
         </section>
         <!-- секция "Чем мы занимаемся" -->
         <section>
-            <h2 class="heading">Чем мы занимаемся</h2>
+            <h2 class="main-heading">Чем мы занимаемся</h2>
             <ul>
             <li><img src="./img-index/img-what-doing-1.jpg" alt="Десктопные приложения" width="370px">
                 <p class="what-doing-words">Десктопные приложения</p>
@@ -71,11 +74,11 @@
         </section>
         <!-- секция "Наша команда" -->
         <section>
-            <h2 class="heading">Наша команда</h2>
+            <h2 class="main-heading">Наша команда</h2>
             <ul>
                 <li><img src="./img-index/img-team-1.jpg" alt="John Smith" width="270px">
-                    <h3 class="heading">John Smith</h3>
-                    <p>Product Designer</p>
+                    <h3 class="small-heading">John Smith</h3>
+                    <p class="job">Product Designer</p>
                     <ul>
                     <li><a href="" aria-label="instagram"></a></li>
                     <li><a href="" aria-label="twitter"></a></li>
@@ -84,8 +87,8 @@
                     </ul>
                 </li>
                 <li><img src="./img-index/img-team-2.jpg" alt="Marta Stewart" width="270px">
-                    <h3 class="heading">Marta Stewart</h3>
-                    <p>Frontend Developer</p>
+                    <h3 class="small-heading">Marta Stewart</h3>
+                    <p class="job">Frontend Developer</p>
                     <ul>
                         <li><a href="" aria-label="instagram"></a></li>
                         <li><a href="" aria-label="twitter"></a></li>
@@ -94,8 +97,8 @@
                     </ul>
                 </li>
                 <li><img src="./img-index/img-team-3.jpg" alt="Robert Jakis" width="270px">
-                    <h3 class="heading">Robert Jakis</h3>
-                    <p>Marketing</p>
+                    <h3 class="small-heading">Robert Jakis</h3>
+                    <p class="job">Marketing</p>
                     <ul>
                     <li><a href="" aria-label="instagram"></a></li>
                     <li><a href="" aria-label="twitter"></a></li>
@@ -104,8 +107,8 @@
                     </ul>
                 </li>
                 <li><img src="./img-index/img-team-4.jpg" alt="Martin Doe" width="270px">
-                    <h3 class="heading">Martin Doe</h3>
-                    <p>UI Designer</p>
+                    <h3 class="small-heading">Martin Doe</h3>
+                    <p class="job">UI Designer</p>
                     <ul>
                         <li><a href="" aria-label="instagram"></a></li>
                         <li><a href="" aria-label="twitter"></a></li>
@@ -117,7 +120,7 @@
         </section>
         <!-- секция "Постоянные клиенты" -->
         <section>
-            <h2 class="heading">Постоянные клиенты</h2>
+            <h2 class="main-heading">Постоянные клиенты</h2>
             <ul class="logo">
                 <li><a href=""><img src="./img-index/logo-4.svg" alt="logo" width="44,27px" class="logo-img"></a></li>
                 <li><a href=""><img src="./img-index/logo-1.svg" alt="logo" width="40px" class="logo-img"></a></li>
@@ -131,12 +134,12 @@
     <!-- подвал сайта -->
     <footer class="footer">
         <a href="./index.html" class="footer-logo"><span >Web</span> Studio</a>
-            <p class="appeals">г. Киев, пр-т Леси Украинки, 26</p>
+            <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
             <ul>
-                <li><p>info@example.com</p></li>
-                <li><p>+38 099 111 11 11</p></li>
+                <li><p class="contact-link">info@example.com</p></li>
+                <li><p  class="contact-link">+38 099 111 11 11</p></li>
             </ul>
-        <p class="appeals">присоединяйтесь</p>
+        <p class="join">присоединяйтесь</p>
         <ul >
         <li><a href="" aria-label="instagram"></a></li>
         <li><a href="" aria-label="twitter"></a></li>
@@ -144,7 +147,7 @@
         <li><a href="" aria-label="linkedin"></a></li>
         </ul>
         <form action="handler.php">
-            <strong class="appeals">Подпишитесь на рассылку</strong>
+            <strong class="join">Подпишитесь на рассылку</strong>
             <input type="text"  placeholder="E-mail" width="450px">
         </form>
         <input type="button" class="button" value="Подписаться">
