--- a/index.html
+++ b/index.html
@@ -32,18 +32,18 @@
     <main>
         <!-- секция hero -->
         <section>
-            <h1 class="hero heading">Эффективные решения для вашего бизнеса</h1>
+            <h1 class="hero ">Эффективные решения для вашего бизнеса</h1>
             <a href="" class="button">Заказать услугу</a>
         </section>
         <!-- секция "Наши преимущества"-->
         <section>
             <h2 class="main-heading">Наши преимущества</h2>
             <ul>
-                <li><img src="./img-index/img-1.svg" alt="Внимание к деталям" width="65,32px">
+                <li><img src="./img-index/img-1.svg" alt="Внимание к деталям" width="65px">
                     <h3 class="heading">Внимание к деталям</h3>
                     <p class="advantages-paragraph">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
-                <li><img src="./img-index/img-2.svg" alt="Пунктуальность" width="66,96px">
+                <li><img src="./img-index/img-2.svg" alt="Пунктуальность" width="67px">
                     <h3 class="heading">Пунктуальность</h3>
                     <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
@@ -51,7 +51,7 @@
                     <h3 class="heading">Планирование</h3>
                     <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
-                <li><img src="./img-index/img-4.svg" alt="Современные технологии" width="54,83px">
+                <li><img src="./img-index/img-4.svg" alt="Современные технологии" width="55px">
                     <h3 class="heading">Современные технологии</h3>
                     <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
@@ -122,12 +122,12 @@
         <section>
             <h2 class="main-heading">Постоянные клиенты</h2>
             <ul class="logo">
-                <li><a href=""><img src="./img-index/logo-4.svg" alt="logo" width="44,27px" class="logo-img"></a></li>
+                <li><a href=""><img src="./img-index/logo-4.svg" alt="logo" width="44px" class="logo-img"></a></li>
                 <li><a href=""><img src="./img-index/logo-1.svg" alt="logo" width="40px" class="logo-img"></a></li>
                 <li><a href=""><img src="./img-index/logo-2.svg" alt="logo" width="41px" class="logo-img"></a></li>
-                <li><a href=""><img src="./img-index/logo-3.svg" alt="logo" width="79,66px" class="logo-img"></a></li>
+                <li><a href=""><img src="./img-index/logo-3.svg" alt="logo" width="80px" class="logo-img"></a></li>
                 <li ><a href=""><img src="./img-index/logo-5.svg" alt="logo" width="59px" class="logo-img"></a></li>
-                <li><a href=""><img src="./img-index/logo-6.svg" alt="logo" width="88,48px" class="logo-img"></a></li>
+                <li><a href=""><img src="./img-index/logo-6.svg" alt="logo" width="89px" class="logo-img"></a></li>
             </ul>
         </section>
     </main>
